Add subscription functionality.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,6 @@
 <div class="clearfix"></div>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+<div id="backtotop">
+	<a href="#"></a>
+</div>
