--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -59,7 +59,7 @@
                     </ul>
                     <div class="tabs-container alt">
                         <div class="tab-content" id="tab1" style="display: none;">
-                            <form method="post" class="login">
+                            <!--<form method="post" class="login">
                                 <p class="form-row form-row-wide">
                                     <label for="username">Username:
                                         <i class="im im-icon-Male"></i>
@@ -82,10 +82,10 @@
                                         <label for="remember-me">Remember Me</label>
                                     </div>
                                 </div>
-                            </form>
+                            </form>-->
                         </div>
                         <div class="tab-content" id="tab2" style="display: none;">
-                            <form method="post" class="register">
+                            <!--<form method="post" class="register">
                                 <p class="form-row form-row-wide">
                                     <label for="username2">Username:
                                         <i class="im im-icon-Male"></i>
@@ -111,7 +111,7 @@
                                     </label>
                                 </p>
                                 <input type="submit" class="button border fw margin-top-10" name="register" value="Register" />
-                            </form>
+                            </form>-->
                         </div>
                     </div>
                 </div>
