--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
             <div class="left-side">
                 <div id="logo">
                     <a href="index-2.html">
-                        <img src="images/logo.png" alt="">
+                        <img src="assets/images/logo.png" alt="">
                     </a>
                 </div>
                 <div class="mmenu-trigger">
