Add login functionality.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -59,17 +59,18 @@
                     </ul>
                     <div class="tabs-container alt">
                         <div class="tab-content" id="tab1" style="display: none;">
-                            <!--<form method="post" class="login">
+                            <form method="post" class="login" [formGroup]="loginForm" (ngSubmit)="checkAuth()">
+                                <p class="error" *ngIf="loginUnsuccess">The credentials that you've entered are incorrect.</p>
                                 <p class="form-row form-row-wide">
-                                    <label for="username">Username:
+                                    <label>Email:
                                         <i class="im im-icon-Male"></i>
-                                        <input type="text" class="input-text" name="username" id="username" value="" />
+                                        <input type="text" class="input-text" name="username" value="" formControlName="loginEmail" />
                                     </label>
                                 </p>
                                 <p class="form-row form-row-wide">
-                                    <label for="password">Password:
+                                    <label>Password:
                                         <i class="im im-icon-Lock-2"></i>
-                                        <input class="input-text" type="password" name="password" id="password" />
+                                        <input class="input-text" type="password" name="password" formControlName="loginPassword" />
                                     </label>
                                     <span class="lost_password">
                                         <a href="#">Lost Your Password?</a>
@@ -78,11 +79,11 @@
                                 <div class="form-row">
                                     <input type="submit" class="button border margin-top-5" name="login" value="Login" />
                                     <div class="checkboxes margin-top-10">
-                                        <input id="remember-me" type="checkbox" name="check">
-                                        <label for="remember-me">Remember Me</label>
+                                        <input type="checkbox" name="check">
+                                        <label>Remember Me</label>
                                     </div>
                                 </div>
-                            </form>-->
+                            </form>
                         </div>
                         <div class="tab-content" id="tab2" style="display: none;">
                             <!--<form method="post" class="register">
