Add register functionality.

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -2,3 +2,9 @@
     color: red;
     font-size: 14px;
 }
+.has-success:focus{
+    border-color: green
+}
+.has-danger:focus{
+    border-color: red
+}
