Add articles listing.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,7 +26,7 @@
                             <a [routerLink]="['a']" [routerLinkActive]="['current']">Hotels</a>
                         </li>
                         <li>
-                            <a [routerLink]="['a']" [routerLinkActive]="['current']">Articles</a>
+                            <a [routerLink]="['articles']" [routerLinkActive]="['current']">Articles</a>
                         </li>
                         <li>
                             <a [routerLink]="['a']" [routerLinkActive]="['current']">Contact US</a>
