--- a/src/app/components/articles/articles-listing/articles-listing.component.html
+++ b/src/app/components/articles/articles-listing/articles-listing.component.html
@@ -100,7 +100,7 @@
                     <div class="widget margin-top-40">
                         <h3>Popular Posts</h3>
                         <ul class="widget-tabs">
-                            <li>
+                            <li *ngFor="let article of popularArticles" >
                                 <div class="widget-content">
                                     <div class="widget-thumb">
                                         <a href="pages-blog-post.html">
@@ -109,41 +109,9 @@
                                     </div>
                                     <div class="widget-text">
                                         <h5>
-                                            <a href="pages-blog-post.html">Hotels for All Budgets </a>
+                                            <a href="pages-blog-post.html">{{article.titre}} </a>
                                         </h5>
-                                        <span>October 26, 2016</span>
-                                    </div>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="widget-content">
-                                    <div class="widget-thumb">
-                                        <a href="pages-blog-post.html">
-                                            <img src="assets/images/blog-widget-02.jpg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="widget-text">
-                                        <h5>
-                                            <a href="pages-blog-post.html">The 50 Greatest Street Arts In London</a>
-                                        </h5>
-                                        <span>November 9, 2016</span>
-                                    </div>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="widget-content">
-                                    <div class="widget-thumb">
-                                        <a href="pages-blog-post.html">
-                                            <img src="assets/images/blog-widget-01.jpg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="widget-text">
-                                        <h5>
-                                            <a href="pages-blog-post.html">The Best Cofee Shops In Sydney Neighborhoods</a>
-                                        </h5>
-                                        <span>November 12, 2016</span>
+                                        <span>{{article.inserted | date:'longDate'}}</span>
                                     </div>
                                     <div class="clearfix"></div>
                                 </div>
