--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,7 +20,7 @@
                             <a [routerLink]="['home']" [routerLinkActive]="['current']">Home</a>
                         </li>
                         <li>
-                            <a [routerLink]="['a']" [routerLinkActive]="['current']">Restaurants</a>
+                            <a [routerLink]="['restaurants']" [routerLinkActive]="['current']">Restaurants</a>
                         </li>
                         <li>
                             <a [routerLink]="['a']" [routerLinkActive]="['current']">Hotels</a>
