--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<button onclick="scriptCall()" id="scriptCall" style="display: none"></button>
 <div class="main-search-container dark-overlay">
 	<div class="main-search-inner">
 		<div class="container">
@@ -28,7 +29,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+    </div>
 	<div class="video-container">
 		<video poster="assets/images/main-search-video-poster.jpg" loop autoplay muted>
 			<source src="assets/images/main-search-video.mp4" type="video/mp4">
